--- a/src/templates/kontakt.html
+++ b/src/templates/kontakt.html
@@ -15,5 +15,18 @@
         <b>Hiermit akzeptieren Sie unsere <a href="{{url_for('impressum_route')}}#Datenschutz">Datenschutzbestimmungen</a></b><br>
         <input name="submit" id="submit" type="submit" value="Absenden" />
     </form>
+    <div class="info_box">
+        <h2>E-Mail</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+            magna aliquyam erat, sed diam voluptua.
+        </p>
+        <hr>
+        <h2>Telefonnummer</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+            magna aliquyam erat, sed diam voluptua.
+        </p>
+    </div>
 </div>
 {% endblock %}
