--- a/src/static/css/navbar.css
+++ b/src/static/css/navbar.css
@@ -73,6 +73,12 @@
   display: block;
 }
 
+@media screen and (max-width: 800px) {
+  .topnav {
+    border-radius: 1px;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child), .dropdown .dropbtn {
     display: none;
