--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -29,7 +29,7 @@
                     Torten
                     <i class="fa fa-caret-down"></i></button>
                 <div class="dropdown-content">
-                    <a href="#Tortensortiment">Tortensortiment</a>
+                    <a href="{{url_for('tortensortiment_route')}}">Tortensortiment</a>
                     <a href="#Fototorten"><i class="fa fa-camera-retro" aria-hidden="true"></i> Fototorten</a>
                     <a href="#Hochzeitstorten">Hochzeitstorten</a>
                     <a href="#Festtagstorten"><i class="fa fa-birthday-cake" aria-hidden="true"></i> Festtagstorten</a>
