--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -9,6 +9,28 @@
     border-top-right-radius: 30px;
     font-size: 6rem;
     font-family: 'Niconne', cursive;
+    padding-left: 0px;
+    width: 100%;
+}
+
+.content {
+    text-align: center;
+    margin-top: 2%;
+    margin-bottom: 20%;
+    padding: 0px;
+}
+
+.container {
+    margin-top: 0%;
+    margin-bottom: 1%;
+}
+
+.low_container {
+    text-align: left;
+    margin: auto;
+    padding: 20px 30px;
+    background-color: white;
+    border-radius: 10px;
 }
 
 .container h2 {
@@ -27,9 +49,62 @@ td,th {
     padding: 8px;
 }
 
+.left_row {
+    width: 70%;
+    padding: 20px;
+    padding-left: 0px;
+    padding-right: 15px;
+    float: left;
+}
+
+.right_row {
+    width: 30%;
+    float: right;
+    padding: 20px;
+    padding-right: 0px;
+    padding-left: 15px;
+}
+
+.footer {
+    display: block;
+    margin-top: 90%;
+}
+
+.left_row img {
+    border-radius: 10px;
+}
+
+.right_row img {
+    top: 0;
+    right: 0;
+    left: 0;
+    max-width: 100%;
+    border-radius: 7px;
+    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+@media screen and (max-width: 950px) {
+    .left_row, .right_row {
+        width: 100%;
+        padding-left: 0px;
+        padding-right: 0px;
+        float: none;
+    }
+
+    .footer {
+        margin-top: 5%;
+    }
+}
+
 @media screen and (max-width: 800px) {
     .heading h1 {
         background-color: transparent;
         font-size: 3rem;
+    }
+
+    .left_row, .right_row {
+        width: 100%;
     }
 }
