--- a/src/static/css/standard.css
+++ b/src/static/css/standard.css
@@ -34,13 +34,17 @@ body {
 .heading h1 {
     font-size: 2.7rem;
     font-family: 'Roboto Slab', serif;
+    border: 3px solid rgba(245, 245, 245, 0.233);
+    padding-left: 30px;
+    border-radius: 90px;
+    width: auto;
 }
-
 
 
 .content {
     text-align: center;
     margin-top: 2%;
+    margin-bottom: 5%;
 }
 
 .info_container {
@@ -72,6 +76,7 @@ body {
     font-weight: bold;
     margin-bottom: 1%;
     font-family: Arial, Helvetica, sans-serif;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .info_box {
@@ -154,7 +159,11 @@ hr {
 
 @media screen and (max-width: 800px) {
     body {
-        margin: 0% 1%;
+        margin: 0% 0%;
+    }
+
+    .content {
+        margin: 5% 2%;
     }
 
     .heading {
@@ -167,9 +176,17 @@ hr {
 
     .heading h1 {
         font-size: 2.2rem;
+        width: 100%;
+        text-align: center;
+        padding-left: 0px;
     }
 
-    .container {
-        padding: 30px;
+    .container, .low_container {
+        padding: 25px;
+        margin-bottom: 4%;
+    }
+
+    .footer {
+        border-radius: 0px;
     }
 }
