--- a/src/static/css/standard.css
+++ b/src/static/css/standard.css
@@ -80,7 +80,7 @@ body {
 }
 
 .info_box {
-    background-color: #4ca4d3;
+    background-color: white;
     border-left: 7px solid rgba(57, 126, 190, 0.774);
     padding: 7px;
     padding-left: 30px;
@@ -89,7 +89,7 @@ body {
     border-bottom-right-radius: 7px;
     text-align: left;
     margin-top: 1%;
-    color: whitesmoke;
+    color: black;
     font-weight: bold;
     margin-bottom: 1%;
     font-family: Arial, Helvetica, sans-serif;
