--- a/src/static/css/dashboard.css
+++ b/src/static/css/dashboard.css
@@ -1,6 +1,7 @@
 #logout_link {
-    background-color: rgba(207, 19, 19, 0.555);
+    background-color: rgba(207, 19, 19, 0.788);
     padding: 8px 20px;
+    border: 2px solid rgb(207, 19, 19);
     border-radius: 3px;
     color: whitesmoke;
     font-weight: normal;
@@ -8,9 +9,44 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#pages_editor_link {
+    background-color: rgba(19, 94, 207, 0.904);
+    padding: 8px 20px;
+    border-radius: 3px;
+    color: whitesmoke;
+    font-weight: normal;
+    text-decoration: none;
+    border: 2px solid rgb(19, 94, 207);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#logout_all_link {
+    background-color: rgba(207, 19, 19, 0.76);
+    padding: 8px 20px;
+    border-radius: 3px;
+    color: whitesmoke;
+    font-weight: normal;
+    text-decoration: none;
+    border: 2px solid rgb(207, 19, 19);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#logout_other_device_link {
+    background-color: transparent;
+    float: right;
+    text-decoration: none;
+    color: rgba(255, 0, 0, 0.76);
+    font-weight: bold;
+    padding: 10px;
+}
+
 .card_content {
-    margin-bottom: 10%;
-    margin-top: 5%;
+    text-align: left;
+}
+
+.wrap_container {
+    margin: 10% 0%;
+    display: block;
 }
 
 .dash_card, .dash_card_plus {
@@ -21,16 +57,81 @@
     border-radius: 10px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     text-align: left;
-    display: block;
     background-color: white;
     margin-right: 1%;
-    float: left;
     margin-top: 1.5%;
     font-family: Arial, Helvetica, sans-serif;
+    float: left;
 }
 
 .dash_card_plus {
-    max-width: 400px;
+    max-width: 350px;
+}
+
+.dash_card_plus h5 {
+    text-align: right;
+    color: royalblue;
+}
+
+#anmerkungen {
+    cursor: pointer;
+    transition-duration: 0.3s;
+}
+
+#anmerkungen:hover {
+    transition-duration: 0.3s;
+    box-shadow: none;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td,th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
 }
 
 .footer {
@@ -38,12 +139,21 @@
 }
 
 @media screen and (max-width:800px) {
+
     .dash_card, .dash_card_plus {
         max-width: 100%;
         margin-bottom: 2%;
+        display: block;
+        float: none;
+        padding: 15px;
     }
 
-    .footer {
-        margin-top: 100%;
+    #logout_link, #logout_all_link {
+        display: block;
+        margin-bottom: 1%;
+    }
+
+    .modal-content {
+        width: 90%;
     }
 }
