--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,14 +15,16 @@
             <div class="container">
                 <h2>Öffnungszeiten</h2>
                 <table>
-                    <tr>
-                        <td>Mo, Di, Do, Fr</td>
-                        <td>5.00 – 12.00 Uhr, 14.00 – 18.00 Uhr</td>
-                    </tr>
-                    <tr>
-                        <td>Mi, Sa</td>
-                        <td>5.00 – 12.00 Uhr</td>
-                    </tr>
+                    <tbody>
+                        <tr>
+                            <td>Mo, Di, Do, Fr</td>
+                            <td>5.00 – 12.00 Uhr, 14.00 – 18.00 Uhr</td>
+                        </tr>
+                        <tr>
+                            <td>Mi, Sa</td>
+                            <td>5.00 – 12.00 Uhr</td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
