--- a/src/templates/tortensortiment.html
+++ b/src/templates/tortensortiment.html
@@ -1,16 +1,23 @@
 {% extends regular_data.base_filepath %}
 {% block content %}
 <div class="content">
-    {% for torte in tortensortiment %}
-    <div class="card">
-        <img src="{{tortensortiment[torte]['img_url']}}">
-        <div class="description_container">
-            <h2>{{tortensortiment[torte]['title']}}</h2>
-            <p>
-                {{tortensortiment[torte]['description']}}
-            </p>
+    <div class="card_container">
+        {% for torte in tortensortiment %}
+        <div class="card" onclick="OpenModal('_{{torte}}')">
+            <img src="{{tortensortiment[torte]['torten_img_path']}}" alt="{{tortensortiment[torte]['torten_name']}}">
+            <div class="description_container">
+                <h5>{{tortensortiment[torte]['upload_zeitpunkt']}}</h5>
+                <h2>{{tortensortiment[torte]['torten_name']}}</h2>
+            </div>
         </div>
+        <div id="Modal_{{torte}}" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="CloseModal('_{{torte}}');">&times;</span>
+                <img src="{{tortensortiment[torte]['torten_img_path']}}" alt="{{tortensortiment[torte]['torten_name']}}">
+                <p>{{tortensortiment[torte]['torten_description']}}</p>
+            </div>
+        </div>
+        {% endfor %}
     </div>
-    {% endfor %}
 </div>
 {% endblock %}
