--- a/src/static/css/dashboard.css
+++ b/src/static/css/dashboard.css
@@ -31,13 +31,24 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#logout_other_device_link {
+#trash_link {
     background-color: transparent;
     float: right;
     text-decoration: none;
     color: rgba(255, 0, 0, 0.76);
     font-weight: bold;
     padding: 10px;
+}
+
+#delete_anmerkung_link {
+    border: 2px solid red;
+    background-color: rgba(255, 0, 0, 0.815);
+    padding: 7px 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    color: whitesmoke;
+    border-radius: 7px;
+    text-decoration: none;
 }
 
 .card_content {
