--- a/src/static/css/pages_editor.css
+++ b/src/static/css/pages_editor.css
@@ -8,7 +8,7 @@ form {
     margin-bottom: 3%;
 }
 
-input {
+input, textarea {
     width: 100%;
     max-width: 100%;
     font-size: 1rem;
@@ -18,11 +18,6 @@ input {
     margin-bottom: 1%;
     text-align: left;
 }
-
-input:active {
-    border: 2px solid limegreen;
-}
-
 
 #submit {
     text-align: center;
