--- a/src/static/css/team.css
+++ b/src/static/css/team.css
@@ -6,7 +6,7 @@
 .card {
     padding: 0px;
     float: left;
-    max-width: 300px;
+    max-width: 250px;
     height: auto;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
     background-color: white;
@@ -53,6 +53,11 @@ hr {
 
 
 @media screen and (max-width: 800px) {
+    .content {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
     .description_container {
         padding: 20px;
     }
