--- a/src/static/css/kontakt.css
+++ b/src/static/css/kontakt.css
@@ -29,6 +29,14 @@ textarea {
     font-size: 1.1rem;
 }
 
+#check {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    font-size: 1.2rem;
+    background-color: transparent;
+    padding: 10px;
+}
+
 a {
     color: royalblue; 
 }
