--- a/src/static/css/navbar.css
+++ b/src/static/css/navbar.css
@@ -49,6 +49,7 @@
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  margin-top: 2.5%;
 }
 
 .dropdown-content a {
@@ -108,5 +109,9 @@
     display: block;
     width: 100%;
     text-align: left;
+  }
+
+  .dropdown-content {
+    margin-top: 0%;
   }
 }
