--- a/src/templates/kontakt.html
+++ b/src/templates/kontakt.html
@@ -11,8 +11,8 @@
         <label for="email">E-Mail</label>
         <input name="email" id="email" type="text" placeholder="E-Mail" required/>
         <textarea name="anmerkung" id="anmerkung" type="text" placeholder="Anmerkung" rows="15" cols="10"></textarea><br>
+        <label id="check" for="checkbox">Hiermit akzeptieren Sie unsere <a href="{{url_for('impressum_route')}}#Datenschutz">Datenschutzbestimmungen</a></label>
         <input name="checkbox" id="checkbox" type="checkbox" value="1" required/>
-        <b>Hiermit akzeptieren Sie unsere <a href="{{url_for('impressum_route')}}#Datenschutz">Datenschutzbestimmungen</a></b><br>
         <input name="submit" id="submit" type="submit" value="Absenden" />
     </form>
     <div class="info_box">
