--- a/src/static/css/hochzeitstorten.css
+++ b/src/static/css/hochzeitstorten.css
@@ -85,8 +85,7 @@ textarea {
     border: 2px solid limegreen;
 }
 
-#edit_link,
-#delete_link {
+#edit_link, #delete_link {
     color: whitesmoke;
     border-radius: 3px;
     background-color: royalblue;
