--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,7 +32,7 @@
                 <div class="dropdown-content">
                     <a href="{{url_for('tortensortiment_route')}}"><i class="fas fa-database"></i> Tortensortiment</a>
                     <a href="#Fototorten"><i class="fa fa-camera-retro" aria-hidden="true"></i> Fototorten</a>
-                    <a href="#Hochzeitstorten"><i class="fas fa-ring"></i> Hochzeitstorten</a>
+                    <a href="{{url_for('hochzeitstorten_route')}}"><i class="fas fa-ring"></i> Hochzeitstorten</a>
                     <a href="#Festtagstorten"><i class="fa fa-birthday-cake" aria-hidden="true"></i> Festtagstorten</a>
                 </div>
             </div>
