--- a/src/static/css/team.css
+++ b/src/static/css/team.css
@@ -6,12 +6,13 @@
 .card {
     padding: 0px;
     float: left;
-    max-width: 250px;
     height: auto;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
     background-color: white;
-    border-radius: 7px;
-    width: 100%;
+    border-radius: 10px;
+    width: auto;
+    max-width: 300px;
+    width: 300px;
     transition-duration: 0.3s;
     margin-right: 1%;
 }
@@ -20,11 +21,11 @@
     left: 0;
     right: 0;
     top: 0;
-    max-width: 100%;
     border-radius: 10px;
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 0px;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 hr {
@@ -32,6 +33,11 @@ hr {
     background-color: black;
     border: 2px solid black;
     border-radius: 10px;
+}
+
+h4 {
+    color: gray;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .description_container {
