--- a/src/static/css/navbar.css
+++ b/src/static/css/navbar.css
@@ -16,7 +16,7 @@
   font-size: 17px;
 }
 
-.active {
+.active, #active {
   background-color: #04AA6D;
   color: white;
 }
@@ -49,7 +49,7 @@
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  margin-top: 2.5%;
+  margin-top: 2.7%;
 }
 
 .dropdown-content a {
