--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -24,11 +24,27 @@
             <h1>{{regular_data['heading_title']}}</h1>
         </div>
         <div class="topnav" id="myTopnav">
+            {% if regular_data.page_name == "index" %}
+            <a href="{{url_for('index_route')}}" class="active"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
+            {% else %}
             <a href="{{url_for('index_route')}}"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
+            {% endif %}
+            {% if regular_data.page_name == "kontakt" %}
+            <a href="{{url_for('kontakt_route')}}" class="active"><i class="fa fa-address-book" aria-hidden="true"></i> Kontakt</a>
+            {% else %} 
             <a href="{{url_for('kontakt_route')}}"><i class="fa fa-address-book" aria-hidden="true"></i> Kontakt</a>
+            {% endif %}
+            {% if regular_data.page_name == "team" %}
+            <a href="{{url_for('team_route')}}" class="active"><i class="fas fa-users"></i> Team</a>
+            {% else %}
             <a href="{{url_for('team_route')}}"><i class="fas fa-users"></i> Team</a>
+            {% endif %}
             <div class="dropdown">
+                {% if regular_data.page_name == "tortensortiment" or regular_data.page_name == "fototorten" or regular_data.page_name == "hochzeitstorten" or regular_data.page_name == "festtagstorten" %}
+                <a class="dropbtn" id="active">Torten <i class="fa fa-caret-down"></i></a>
+                {% else %}
                 <a class="dropbtn">Torten <i class="fa fa-caret-down"></i></a>
+                {% endif %}
                 <div class="dropdown-content">
                     <a href="{{url_for('tortensortiment_route')}}"><i class="fas fa-database"></i> Tortensortiment</a>
                     <a href="#Fototorten"><i class="fa fa-camera-retro" aria-hidden="true"></i> Fototorten</a>
@@ -37,16 +53,32 @@
                 </div>
             </div>
             <div class="dropdown">
+                {% if regular_data.page_name == "occasions" or regular_data.page_name == "ostern" or regular_data.page_name == "weihnachten" or regular_data.page_name == "aller_heiligen" %}
+                <a class="dropbtn" id="active">Besondere Anlässe <i class="fa fa-caret-down"></i></a>
+                {% else %}
                 <a class="dropbtn">Besondere Anlässe <i class="fa fa-caret-down"></i></a>
+                {% endif %}
                 <div class="dropdown-content">
                     <a href="#ostern"><i class="fas fa-egg"></i> Ostern</a>
                     <a href="#weihnachten"><i class="fa fa-tree" aria-hidden="true"></i> Weihnachten</a>
                     <a href="#aller_heiligen">Aller Heiligen</a>
                 </div>
             </div>
+            {% if regular_data.page_name == "service" %}
+            <a href="{{url_for('service_route')}}" class="active">Service</a>
+            {% else %}
             <a href="{{url_for('service_route')}}">Service</a>
+            {% endif %}
+            {% if regular_data.page_name == "anfahrt" %}
+            <a href="{{url_for('anfahrt_route')}}" class="active"><i class="fa fa-car" aria-hidden="true"></i> Anfahrt</a>
+            {% else %}
             <a href="{{url_for('anfahrt_route')}}"><i class="fa fa-car" aria-hidden="true"></i> Anfahrt</a>
+            {% endif %}
+            {% if regular_data.page_name == "impressum" %}
+            <a href="{{url_for('impressum_route')}}" class="active">Impressum</a>
+            {% else %}
             <a href="{{url_for('impressum_route')}}">Impressum</a>
+            {% endif %}
             <!--<a href="{{url_for('login_route')}}"><i class="fas fa-sign-in-alt"></i> Login</a>!-->
             <a href="javascript:void(0);" class="icon" onclick="NavbarFunction()">&#9776;</a>
         </div>
