--- a/src/static/css/standard.css
+++ b/src/static/css/standard.css
@@ -40,6 +40,34 @@ body {
     width: auto;
 }
 
+.cookie_question_container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    border-radius: 0px;
+    padding: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+#close_cookie_container {
+    float: right;
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+}
+
+#akzeptieren_link, #ablehnen_link {
+    background-color: rgb(67, 22, 97);
+    border: 2px solid rgb(77, 0, 128);
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+    padding: 7px 15px;
+    border-radius: 5px;
+}
 
 .content {
     text-align: center;
